fixed menu on mobile

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -5,7 +5,7 @@
 
   @include onTablet {
     padding-top: 40px;
-    height: 225px;
+    height: 300px;
   }
 
   @include onDesktop {
