--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -6,6 +6,7 @@
   font-size: 16px;
   line-height: 140%;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 
   &__body {
     min-width: 316px;
@@ -22,9 +23,11 @@
     top: 0;
     right: 0;
     left: 0;
+    min-width: 316px;
     max-height: 100vh;
+    width: 100vw;
 
-    overflow-y: auto;
+    overflow: hidden;
 
     transition: all $transition-duration;
     transform: translateY(-100%);
